# orbit

./: .gitignore  CLAUDE.md  README.md
docs/: AGENT-MODEL.md  CATCHUP.md  COST-TRACKING-IMPL.md  MEDIA-PROCESSING.md  MISSIONS.md  OTA.md  PERCEPTION-PIPELINE.md  PERCEPTION-PYRAMID.md  PERCEPTION-RUNBOOK.md  PERCEPTION-TO-AGENT.md  PLAN.md  SERVER-BRAIN-IMPL.md  SERVER-BRAIN-SELFMOD.md  SERVER-BRAIN.md  TASKS_V1.md  TODO.md  WHATSAPP.md  agent-model.md  barge-in-findings.md  brain.md  client-vision-findings.md  conversation-examples.md  conversation-ux-flow.md  cost-tracking-impl.md  debugability.md  decision-frame.md  device-control.md  interaction-models.md  media-processing.md  memory.md  observability.md  ota.md  perception-pipeline.md  perception-pyramid.md  perception-to-agent.md  perception-to-brain.md  plan.md  slack.md  task-vs-behaviour.md  tasks.md  (+1 more)
docs/bugs/: WIP.md  mic-mute-simplification.md
docs/decision-traces/: audio-enricher.md  audio-record-crash.md  behaviour-conductor.md  behaviour-orchestrator.md  bg-audio-summarizer.md  coherence-layer.md  conductor-v1-design.md  ego-sample.md  ego.md  facefollow-and-actuator-lease.md  long-term-memory-curator.md  motion-speech-timing.md  notification-inbox.md  orchestrator-v1-design.md  runtime-dock-binding.md  server-brain-design.md  server-brain-impl.md  server-brain-selfmod.md  tasks-design-history.md  thin-client-consolidation.md  visual-search.md
docs/dock-body-firmware/: firmware-design.md  hardware-design.md
docs/findings/: 2026-07-13-busy-queue-black-hole.md  2026-07-21-voice-stop-idle-gate.md  a1-self-review.md  (+10 more)
features-todo/: feedback-flow.md
models/: .gitignore  BENCHMARKS.md  README.md
node-dock/: LIFECYCLE.md  MODELS.md  README.md  STRUCTURE.md  UX.md  VALIDATION.md
node-dock/body-firmware/dock_body_v0/src/: CMakeLists.txt  bodylink_motion.c  bodylink_motion.h  bodylink_proto.c  bodylink_proto.h  bodylink_ws.c  bodylink_ws.h  idf_component.yml  main.c  servo.c  servo.h  station_link.c  station_link.h  station_ota.c  station_ota.h  wifi_sta.c  wifi_sta.h
node-rover/: Dockerfile  README.md
ops/: README.md  config.sh  provision.sh  verify.sh
orbit-station/: .gitignore  PEER-CONTRACT.md  README.md  TESTING.md  package-lock.json  package.json
plat/: README.md
(+741 files in other folders)
