idf_component_register(
    SRCS
        "main.c"
        "servo.c"
        "wifi_sta.c"
        "bodylink_proto.c"
        "bodylink_motion.c"
        "bodylink_ws.c"
    INCLUDE_DIRS "." "../include"
    REQUIRES
        esp_wifi
        nvs_flash
        esp_event
        esp_netif
        esp_http_server
        esp_driver_mcpwm
        esp_timer
        json
)
